...
            context.pop();
          },
          icon: Icon(Icons.close),
        ),
        actions: [
          IconButton(
            key: ValueKey("DoneIconButton"),
            onPressed: _sendNewAccountAndClose,
            icon: Icon(Icons.done),
          ),
        ],
      ),

...
                            leading: Icon(Icons.person_outline),
                            title: Row(
                              mainAxisAlignment: MainAxisAlignment.spaceBetween,
                              children: [
                                Flexible(
                                  child: TextField(
                                    key: ValueKey("NameTextField"),
                                    controller: _nameController,
                                    decoration: InputDecoration(
                                      border: InputBorder.none,
                                      hintText: AppLocalizations.of(
                                        context,
                                      ).name,
...
