...
                "assets/icons/incomes.svg",
                colorFilter: _currentColorFilter(context, 1),
              ),
              label: AppLocalizations.of(context).incomes,
            ),
            NavigationDestination(
              key: ValueKey("AccountPage button"),
              icon: SvgPicture.asset(
                "assets/icons/calculator.svg",
                colorFilter: _currentColorFilter(context, 2),
              ),
              label: AppLocalizations.of(context).account,
            ),
...
