...
        actions: [
          BlocBuilder<AccountCubit, MainAccountStateUI>(
            buildWhen: (previous, current) => current is AccountStateUI,
            builder: (context, state) {
              if (state is! AccountLoadedState) return SizedBox.shrink();
              return IconButton(
                key: ValueKey("AccountEdit button"),
                onPressed: () async {
                  final newAccount = await context.push<AccountUpdateRequestModel>(
                    "${GoRouterState.of(context).uri}/edit/${state.account.id}",
                    extra: state.account,
                  );
                  if (newAccount != null && context.mounted) {
...
